src/css/pages/overview.css
/* Bento Layout */
.overview-content {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
}

.overview-banner,
.pinned-notes,
.assignments {
  grid-column: span 1;
}

.r-col {
  align-self: start;
  grid-column: span 1;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

@media (min-width: 1024px) {
  .overview-content {
    grid-template-columns: repeat(4, 1fr);
  }
  .overview-banner,
  .pinned-notes {
    grid-column: span 4;
  }
  .assignments,
  .r-col {
    grid-column: span 2;
  }
}

@media (min-width: 1280px) {
  .overview-banner {
    grid-column: span 3;
  }
  .pinned-notes {
    grid-column: span 1;
  }
  .assignments,
  .r-col {
    grid-column: span 2;
  }
}

/* Tiles (general) */
.card {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding: 1rem;
  border-radius: 0.75rem;
  background-color: var(--color-card-bg);
}

#overview h3:not(.event-details h3) {
  text-transform: uppercase;
  letter-spacing: 0.05em;
  line-height: 0.75em;
}

/* Banner */
.overview-banner {
  position: relative;
  display: flex;
  flex-direction: column;
  padding: var(--padding-card) calc(var(--padding-card) / 2)
    calc(var(--padding-card) / 2) var(--padding-card);
  border-radius: 1.5rem;
  height: auto;
  overflow: hidden;
}

.overview-banner h1 {
  font-size: var(--text-5xl);
  font-weight: 600;
  text-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
}

.overview-banner h2 {
  margin-bottom: 0.25rem;
  font-size: var(--text-base);
  font-weight: 300;
  text-transform: uppercase;
  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
}

.banner-description {
  margin: 1rem 0;
  width: clamp(35ch, 80%, 60ch);
  font-size: var(--text-lg);
  text-wrap: balance;
  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
}

.hero-img-container {
  position: absolute;
  inset: 0;
  z-index: -1;
}

.hero-img {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -1;
}

.hero-gradient {
  position: absolute;
  inset: 0;
  background: linear-gradient(
    to right,
    var(--color-black) -4%,
    rgba(0, 0, 0, 0) 90%
  );
  background-repeat: no-repeat;
  background-size: 150% 100%;
  background-position: 50% 0;
  pointer-events: none;
  transition: background-position 1s linear;
}

@media (max-width: 1024px) {
  .hero-gradient {
    background-position: 0 0;
  }
}

.hero-img-container::before {
  display: block;
  width: 100%;
  height: 100%;
  content: "";
  background: linear-gradient(to top, rgba(0, 0, 0, 0.6) 10%, transparent 60%);
}

/* Countdown Timer */
.countdown-container {
  align-self: flex-end;
  display: inline-block;
  width: auto;
  overflow: hidden;
  white-space: nowrap;
  margin-top: 1rem;
  text-align: right;
}

.unit-label {
  font-family: var(--font-display);
  font-size: var(--text-xs);
  font-weight: 600;
  color: var(--color-white);
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 0.125em;
  margin-bottom: 0.25rem;
  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
}

.countdown-display > div {
  display: inline-block;
  font-family: var(--font-countdown);
  font-weight: 600;
  font-size: var(--text-3xl);
  color: var(--color-black);
}

@media (max-width: 768px) {
  .countdown-display > :nth-last-child(-n + 2) {
    display: none;
  }

  .countdown-container {
    align-self: flex-start;
    text-align: left;
  }
}

.digit-container {
  display: inline-block;
  width: calc(1ch + 0.8ch);
  padding: 0.125ch 0.4ch;
  border-radius: 0.25rem;
  background-color: var(--color-white);
  text-align: center;
}

.countdown-display .colon {
  color: var(--color-white);
  font-size: var(--text-4xl);
  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
}

.countdown-trip-dates {
  font-family: var(--font-display);
  font-size: var(--text-xs);
  font-weight: 600;
  color: var(--color-white);
  text-transform: uppercase;
  letter-spacing: 0.125em;
  margin-bottom: 0.375rem;
  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
}

/* Pinned Notes */
.pinned-notes.tile {
  gap: 0.75rem;
  padding: 1.5rem;
  container-type: inline-size;
}

.pinned-notes-header {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  flex-wrap: wrap;
  column-gap: 2rem;
  row-gap: 0.5rem;
}

.pinned-notes-left {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  column-gap: 0.75rem;
  row-gap: 0.25rem;
}

.pinned-notes-header h2 {
  display: inline-block;
  font-size: clamp(var(--text-base), 5cqi, var(--text-lg));
  text-wrap: nowrap;
}

.pin-icon {
  font-size: var(--text-2xl);
  display: inline-block;
}

.pinned-notes-time {
  text-wrap: nowrap;
  color: var(--color-surface-text-secondary);
}

.note {
  font-size: var(--text-lg);
  text-wrap: balance;
}

/* Assignments Tile */
.assignments {
  position: relative;
  overflow: hidden;
  border-radius: 1.5rem;
}

.assignments .scroll-content {
  overflow: auto;
  scrollbar-width: none;
}

.assignments .scroll-content::-webkit-scrollbar {
  display: none;
}

.assignments .scroll-wrapper::before,
.assignments .scroll-wrapper::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  height: 3rem;
  pointer-events: none;
  opacity: 0;
  transition: opacity 100ms ease-in-out;
}

.assignments .scroll-wrapper::before {
  top: 0;
  background: linear-gradient(
    to bottom,
    var(--color-black-400-50),
    transparent
  );
}

.assignments .scroll-wrapper::after {
  bottom: 0;
  background: linear-gradient(to top, var(--color-black-400-50), transparent);
}

.assignments .scroll-wrapper.top-shadow::before,
.assignments .scroll-wrapper.bottom-shadow::after {
  opacity: 1;
}

.assignments-weeks-list {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}

.week-header {
  display: flex;
  align-items: flex-start;
  gap: 0.75rem;
  margin-bottom: 1rem;
}

.week-accent-bar {
  align-self: stretch;
  width: 0.25rem;
  background-color: var(--color-accent);
}

.passed .week-accent-bar {
  background-color: var(--color-surface-accent-disabled);
}

.passed.week-block {
  opacity: 0.5;
  transition: opacity 100ms ease;
}

.passed.week-block:hover {
  opacity: 1;
}

.week-header-text {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.week-header h3 {
  text-transform: uppercase;
  letter-spacing: 0.05em;
  line-height: 0.75em;
}

.due-date {
  display: inline-block;
  line-height: 0.75em;
  color: var(--color-surface-text-secondary);
}

.assignments-list {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.assignment-title {
  font-weight: 600;
}

.assignment-details {
  color: var(--color-card-text-secondary);
}

.resource-block {
  display: flex;
  gap: 0.5rem;
  margin-top: 1rem;
}

.resource-icon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  aspect-ratio: 1/1;
  padding: 0.375rem;
  border-radius: 0.375rem;
  background-color: var(--color-card-icon-bg);
  transition: background-color 100ms ease-in;
}

.resource-icon:hover {
  background-color: var(--color-card-icon-bg-hover);
}

/* Upcoming Events */
.events-list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.upcoming-events .card {
  flex-direction: row;
  align-items: center;
  gap: 1.25rem;
}

.event-date-badge {
  display: flex;
  gap: 0.75rem;
}

.event-calendar-date {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 3.125rem;
  height: 3.125rem;
  font-family: var(--font-display);
  font-size: var(--text-3xl);
  border: 1px solid var(--color-accent);
  border-radius: 0.375rem;
  overflow: hidden;
  text-wrap: nowrap;
}

.event-month-day {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 3.25rem;
  font-family: var(--font-display);
  font-size: var(--text-sm);
  letter-spacing: 0.05rem;
}

.event-month-day > :first-child {
  color: var(--color-accent);
  text-transform: uppercase;
}

.event-details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.125rem;
}

.event-details h3 {
  font-family: var(--font-body);
}

.event-details p {
  color: var(--color-card-text-secondary);
}

/* Fundraising Progress */
/* .fundraising-progress .tile-content {
  gap: 3.5rem;
} */

.goal-group {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.goal-text-group {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
  gap: 1rem;
  margin-top: 0.25rem;
  line-height: 0.7em;
}

.current-percent {
  font-size: var(--text-5xl);
  font-weight: 600;
  line-height: 0.7em;
}

.fundraising-progress .progress-bar {
  border-radius: 1.5rem;
  height: 1.5rem;
  background-color: var(--color-card-bg);
}

.fundraising-progress .percent-sign {
  font-size: var(--text-2xl);
  margin-left: 0.25rem;
}

.fundraising-progress .progress {
  border-right: 3px solid var(--color-white);
}

